--- a/style.css
+++ b/style.css
@@ -66,8 +66,11 @@ body{
 }
 .roll{
     color: white;
-    font-size: 3rem;
+    font-size: 2.2rem;
     font-family: 'Roboto', sans-serif;
+}
+.auto-type{
+    color: rgb(127, 247, 147);
 }
 .line{
     margin-top: 60px;
@@ -161,7 +164,7 @@ body{
 .con2{
     width: 90%;
     margin: 50px auto;
-    height: 650px;
+    height: 600px;
     border-radius: 30px;
     box-shadow: 5px 15px 15px grey;
     background-color: #FFFFFF;
@@ -177,6 +180,7 @@ body{
     position: absolute;
     bottom: 0%;
     left: 0%;
+    margin-bottom: 50px;
 }
 
 .aboutright{
@@ -237,6 +241,7 @@ h4{
 #port{
     width: 90%;
     margin: 50px ;
+    margin-top: 20PX;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -391,6 +396,8 @@ h4{
     justify-content: center;
     flex-wrap: wrap;
     overflow: hidden;
+    margin-top: 20px;
+    width: 80%;
 }
 .card{
     margin-top: 30px;
@@ -400,10 +407,19 @@ h4{
     text-align: center;
     font-size: 1.2rem;
 }
+#text{
+    /* border: 2px solid gold; */
+    text-align: justify;
+}
+.test1{
+    height: 180px;
+    width: 180px;
+    border-radius: 50%;
+}
 .view{
     width: 100%;
     height: 80px;
-    margin-top: 80px;
+    margin-top: 10px;
     background-color: rgb(55, 196, 252);
     border-bottom-left-radius: 20px;
     border-bottom-right-radius: 20px;
